# coolifyEasyAPI

./: .env.example  README.md  add_captions.py  deployed_api_request.sh  ffmpeg.py  gcp_auth.py  get_token.py  main.py  nixpacks.toml  pyproject.toml  sample_request.json  sample_request.py  sample_request.sh  sample_speedup_request.sh  test_captions_curl.sh  test_captions_endpoint.py  test_captions_translation.sh  test_deployed_api.sh  test_with_real_token.py
